@@ -13,6 +13,7 @@ v0.2.2
                close if the (X) button was clicked after an upload had
                failed.
   - [feature]  Allow space characters in upload filenames.
+  - [bugfix]   Implement automatic slide lock cleanup on logout.
 
 v0.2.1
   - [bugfix]   Fix a bug where the timeline didn't update after the
